<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Tip">Tip is: $</string>
    <string name="TenPercent">10%</string>
    <string name="FifteenPercent">15%</string>
    <string name="TwentyPercent">20%</string>
    <string name="Input">Input your number</string>

</resources>
